--- a/docs/iyo.css
+++ b/docs/iyo.css
@@ -21,8 +21,8 @@ html {
   --aside-size:      12px;
   --fig-cap-size:    13px;
   /*-- Main font colors --*/
-  --title-color:     #000000;
-  --header-color:    rgba(0, 0, 0, 0.8);
+  --title-color:     #644E5B;
+  --header-color:    #9E5A63;
   --body-color:      rgba(0, 0, 0, 0.8);
   --aside-color:     rgba(0, 0, 0, 0.6);
   --fig-cap-color:   rgba(0, 0, 0, 0.6);
@@ -36,7 +36,7 @@ html {
 /*-- ARTICLE METADATA --*/
 d-byline {
   --heading-size:    0.6rem;
-  --heading-color:   rgba(0, 0, 0, 0.5);
+  --heading-color:   #9E5A63;
   --body-size:       0.8rem;
   --body-color:      rgba(0, 0, 0, 0.8);
 }
